clang/test/BSC/Negative/Generic/StructAndFunction/cast_struct_to_int/cast_struct_to_int.cbs
// RUN: %clang_cc1 -verify %s

T1 foo<T1, T2> (T1 a, T2 b)
{
  int x = int(b);           // expected-error {{operand of type 'struct S' where arithmetic or pointer type is required}}
  return x;
}

struct S
{
  int a;
};

int main ()
{
  float a = 2.5;
  struct S s1 = {.a = 1};
  int res = foo<float>(a, s1);      // expected-note {{in instantiation of function template specialization 'foo<float, struct S>' requested here}}
  return 0;
}